Fixed alignment of expand/collapse '>' buttons in course settings.

--- a/scss/trema/elements.scss
+++ b/scss/trema/elements.scss
@@ -316,8 +316,8 @@ body #page {
 
     .mform {
         .btn.btn-icon {
-            margin: 0 0.5rem;
-            padding: 0 .5rem 0 .25rem;
+            margin: 0;
+            padding-left: 0.12rem;
             text-align: center;
             line-height: 1;
             height: auto;
